      \item More matrix algebra functions (e.g. \code{chol()} and
      \code{solve()}) accept logical matrices (and coerce to numeric).
     
      \item \code{sample.int()} has some support for  \eqn{n \ge
	2^{31}}{n >= 2^31}: see its help for the limitations.

      A different algorithm is used for \code{n, size, replace = FALSE,
	prob = NULL)} for \code{n > 1e7} and \code{size <= n/2}.  This
	is much faster and uses less memory, but does give different
	results.
    }
  }

  \subsection{LONG VECTORS}{
    \itemize{
      \item There is support for vectors longer than \eqn{2^{31}-1}{2^31
      - 1} elements on 64-bit platforms.  This applies to raw, logical,
      integer, double, complex and character vectors, as well as lists.
      (Elements of character vectors remain limited to
      \eqn{2^{31}-1}{2^31 - 1} bytes.)

      All aspects are currently experimental.

      \item Most operations which can sensibly be done with long vectors
      now work: others may return the error \sQuote{long vectors not
      supported yet}.  Some of these are because they explicitly work
      with integer indices (e.g. \code{anyDuplicated()}, \code{match()},
      \code{sample.int()}) or because other limits (e.g. of character
      strings or matrix dimensions) would be exceeded or the operations
      would be extremely slow.

      \item \code{length()} returns a double for long vectors, and
      lengths can be set to \eqn{2^{31}}{2^31} or more by the
      replacement function with a double value.

      \item Most aspects of indexing are available.  Generally
      double-valued indices can be used to access elements beyond
      \eqn{2^{31}-1}{2^31 - 1}.

      \item There is some support for matrices and arrays with each
      dimension less than \eqn{2^{31}}{2^31} but total number of
      elements more than that.  Only some aspects of matrix algebra work
      for such matrices, often taking minutes or hours for the smallest